Removing sigfig option; not necessary enough to justify the work to explain and maintain. Update formatting in tool tip to use line breaks, add a Regression type message in tooltip so it's clear which ones are (on top of the red color). Add a help icon with link to GitHub wiki

--- a/UnityPerformanceBenchmarkReporter/UnityPerformanceBenchmarkReporter.csproj
+++ b/UnityPerformanceBenchmarkReporter/UnityPerformanceBenchmarkReporter.csproj
@@ -23,6 +23,8 @@
     <EmbeddedResource Include="Report\styles.css" />
     <EmbeddedResource Include="Report\UnityLogo.png" />
     <EmbeddedResource Include="Report\warning.png" />
+    <EmbeddedResource Include="Report\help.png" />
+    <EmbeddedResource Include="Report\help-hover.png" />
   </ItemGroup>
 
 </Project>
