Removed PerformanceBenchmarkTests Added PerformanceBenchmarkTestsJson Added PerformanceBenchmarkTestsXML Added TestData files Fixed baseline files not being read when path is a directory

--- a/UnityPerformanceBenchmarkReporterTests/UnityPerformanceBenchmarkReporterTests.csproj
+++ b/UnityPerformanceBenchmarkReporterTests/UnityPerformanceBenchmarkReporterTests.csproj
@@ -44,6 +44,30 @@
     <None Update="TestData\Results\results2.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\baseline.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\baseline2.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\BaselineJson2\baseline2.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\BaselineJson\baseline.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\results.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\results2.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\ResultsJson\results.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\ResultsJson2\results2.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
