Add updated .net sdk versions for building against.
Can be used by add '-p:TargetFramework=netX.X' to the publish or build command.

--- a/UnityPerformanceBenchmarkReporter/UnityPerformanceBenchmarkReporter.csproj
+++ b/UnityPerformanceBenchmarkReporter/UnityPerformanceBenchmarkReporter.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
     <startupobject>UnityPerformanceBenchmarkReporter.Program</startupobject>
 	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+	<TargetFrameworks>netcoreapp3.1;net6.0;net7.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
