--- a/UnityPerformanceBenchmarkReporterTests/UnityPerformanceBenchmarkReporterTests.csproj
+++ b/UnityPerformanceBenchmarkReporterTests/UnityPerformanceBenchmarkReporterTests.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <TargetFrameworks>netcoreapp3.1;net6.0;net7.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
